<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MealDelivery</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="shake">Shake</string>
    <string name="home">Home</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="search_hint">Search</string>
    <string name="order">Order</string>
    <string name="addtobag">Add to bag</string>
    <string name="emailaddress">user@email.com</string>
    <string name="address">address</string>
    <string name="start_record">record</string>
    <string name="stop_record">stop</string>
    <string name="cancel">Cancel</string>
    <string name="send">send</string>
    <string name="check">check</string>
    <string name="get_direction">Direction</string>
    <string name="addtofavorite">Add</string>
    <string name="voice">Voice</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="Email">Email</string>
    
    
    <color name="background">#6CBDC4</color>
    <color name="sidebar_bg">#D88778</color>
    <color name="header_background">#F8F6DE</color>
    <color name="header_text">#82CED4</color>
    <color name="searchbar_bg">#cccc33</color>
    <color name="text_bg">#E1E3E5</color>
    <color name="button_bg">#cccccc</color>
    <color name="button_text">#0099cc</color>
    <color name="content_bg">#f5bf9b</color>
    <color name="name_text">#E3745F</color>

    <string-array name="category">
        <item>Cafe</item>
        <item>Chinese</item>
        <item>Indian</item>
        <!--item>category4</item>
        <item>category5</item-->
    </string-array>

    <string name="title_activity_neaby">Neaby</string>

</resources>