<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_element"
    android:layout_width="70dp"
    android:layout_height="300dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/start_record"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/start_record"
        android:textColor="@color/button_text" />

    <Button
        android:id="@+id/check"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/check"
        android:textColor="@color/button_text" />

    <Button
        android:id="@+id/send"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/send"
        android:textColor="@color/button_text" />
        
</LinearLayout>