<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/header_text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </RelativeLayout>

    <com.example.mealdelivery.PhotoView
        android:id="@+id/camera"
        android:layout_width="170dp"
        android:layout_height="210dp"
        android:layout_alignRight="@+id/phonenumber"
        android:layout_alignTop="@+id/username"
        android:layout_marginLeft="50dp" />
   
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="120dp"
        android:ellipsize="start"
        android:ems="10"
        android:hint="@string/emailaddress"
        android:inputType="textPersonName" />
    
    <TextView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username"
            android:layout_marginLeft="1dp"
        	android:layout_marginTop="120dp"
            android:text="Email:"
            android:textSize="22sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_marginLeft="1dp"
        android:text="Password:"
        android:textSize="22sp" />
    
    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/firstname"
        android:layout_marginLeft="1dp"
        android:text="FirstName:"
        android:textSize="22sp" />
    
    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/firstname"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lastname"
        android:layout_marginLeft="1dp"
        android:text="LastName:"
        android:textSize="22sp" />    
    
    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/lastname"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:ems="20"
        android:hint="@string/phonenumber"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phonenumber"
        android:layout_marginLeft="1dp"
        android:text="Phone:"
        android:textSize="22sp" />    
    
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/phonenumber"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:ems="20"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/address"
        android:layout_marginLeft="1dp"
        android:text="Address:"
        android:textSize="22sp" /> 
    
    <Button
        android:id="@+id/signupbutton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="signupMethod"
        android:text="@string/signup"
        android:textColor="@color/button_text" />

    <Button
        android:id="@+id/signinbutton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="signinMethod"
        android:text="@string/signin"
        android:textColor="@color/button_text" />

    <TextView
        android:id="@+id/errinput"
        android:layout_width="600dp"
        android:layout_height="40dp"
        android:layout_below="@+id/signinbutton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="30sp" />

</RelativeLayout>