<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/logo_dragon"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="@drawable/dragon" />

    <TextView
        android:id="@+id/errinput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="30sp" />
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/username_bg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/text_bg" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_bg"
            android:layout_alignLeft="@+id/username_bg"
            android:layout_alignRight="@+id/username_bg"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/username"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="30" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/password_bg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/text_bg" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/password_bg"
            android:layout_alignLeft="@+id/password_bg"
            android:layout_alignRight="@+id/password_bg"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="20" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/signinbutton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/signin"
            android:textColor="@color/button_text" 
            android:onClick="signinMethod" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="172dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:textColor="@color/button_text" 
            android:onClick="signupMethod" />
    </RelativeLayout>

</LinearLayout>